# simple-chat-cpp

./: .gitignore  CMakeLists.txt  LICENSE
include/: sysmsg.h  sysmsg.hpp
include/client/: client.h
include/server/: server.h
src/: sysmsg.cc
src/client/: client.cc  run_client.cc
src/server/: run_server.cc  server.cc
